--- a/Assignment_1/index.html
+++ b/Assignment_1/index.html
@@ -35,8 +35,8 @@
   <div class="section">
     <div class="section 2">
       <div class="card-panel grey">
-        <div class="row">
-          <form action="#">
+        <div class="row" id="gender">
+          <form action="#"></form>
             <div class="col s6">
               <input type="checkbox" id="test5"/>
               <label for="test5"><span class="black-text text-darken-2">Men</label></span>
@@ -44,11 +44,11 @@
               <label for="test5"><span class="black-text text-darken-2">Women</label></span>
               <input type="checkbox" id="test5"/>
               <label for="test5"><span class="black-text text-darken-2">Children</label></span>
-            </div>
+          </div>
             <div class="col s6 " align="right">
               <a  class="waves-effect waves-light btn"; "left"; >See all products</a>
+              </div>
             </div>
-          </form>
         </div>
       </div>
     </div>
@@ -56,7 +56,7 @@
     <div class="section">
       <div class="men">
         <div class="row">
-          <div class="col s3 m3">
+          <div class="col-md-3">
             <div class="card">
               <div class="card-image waves-effect waves-block waves-light">
                 <img class="activator" src="images/assets/products/tshirt.png">
@@ -73,7 +73,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col s3 m3">
+          <div class="col-md-3">
             <div class="card">
               <div class="card-image waves-effect waves-block waves-light">
                 <img class="activator" src="images/assets/products/pants.png">
@@ -90,7 +90,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col s3 m3">
+          <div class="col-md-3">
             <div class="card">
               <div class="card-image waves-effect waves-block waves-light">
                 <img class="activator" src="images/assets/products/backpack.png">
