--- a/Assignment_1/index.html
+++ b/Assignment_1/index.html
@@ -13,6 +13,7 @@
 <!-- this is the beginning of the navbar-->
 <body>
   <div class="part1">
+    <div class="row">
     <div class="divider"></div>
     <nav style="background-color: transparent;">
       <div class="nav-wrapper">
@@ -30,83 +31,82 @@
       <p align="center">We understand that you need to look good and feel great.</p>
       <p align="center">It all starts with what you are wearing.</p>
     </div>
+    </div>
   </div>
   <!-- this is the beginning of section 2 -->
-  <div class="section">
+  <div class="section" id="panel">
     <div class="section 2">
-      <div class="card-panel grey">
+      <div class="card-panel grey" id="panel1">
         <div class="row" id="gender">
           <form action="#"></form>
-            <div class="col s6">
-              <input type="checkbox" id="test5"/>
-              <label for="test5"><span class="black-text text-darken-2">Men</label></span>
-              <input type="checkbox" id="test5"/>
-              <label for="test5"><span class="black-text text-darken-2">Women</label></span>
-              <input type="checkbox" id="test5"/>
-              <label for="test5"><span class="black-text text-darken-2">Children</label></span>
+          <div class="col-md-6">
+            <input type="checkbox" id="test5"/>
+            <label for="test5"><span class="black-text text-darken-2">Men</label></span>
+            <input type="checkbox" id="test5"/>
+            <label for="test5"><span class="black-text text-darken-2">Women</span></label>
+            <input type="checkbox" id="test5"/>
+            <label for="test5"><span class="black-text text-darken-2">Children</span></label>
           </div>
-            <div class="col s6 " align="right">
-              <a  class="waves-effect waves-light btn"; "left"; >See all products</a>
-              </div>
-            </div>
+          <div class="col-md-6" align="right">
+            <a class="waves-effect waves-light btn"; "left"; >see allproducts</a>
+          </div>
         </div>
+
       </div>
     </div>
+  </div>
     <!-- this is the beginning of section 3 -->
-    <div class="section">
-      <div class="men">
-        <div class="row">
-          <div class="col-md-3">
+    <div class="row">
+      <div class="section">
+        <div class="men">
+          <div class="col-md-4">
             <div class="card">
               <div class="card-image waves-effect waves-block waves-light">
-                <img class="activator" src="images/assets/products/tshirt.png">
+              <img class="activator" src="images/assets/products/tshirt.png">
               </div>
               <div class="card-content">
-                <span class="card-title activator grey-text text-darken-4">Card Titlemore_vert</i></span>
+                <span class="card-title activator grey-text text-darken-4">Card Titlemore_vert</span>
                 <p><a href="#">This is a link</a></p>
               </div>
               <div class="card-reveal">
-                <span class="card-title grey-text text-darken-4">Card Titleclose</i></span>
+                <span class="card-title grey-text text-darken-4">Card Titleclose</span>
                 <p>Here is some more information about this product that is only revealed once clicked on.</p>
               </div>
             </div>
+            </div>
           </div>
-        </div>
-        <div class="row">
-          <div class="col-md-3">
+        </div>      
+          <div class="col-md-4">
             <div class="card">
               <div class="card-image waves-effect waves-block waves-light">
                 <img class="activator" src="images/assets/products/pants.png">
               </div>
               <div class="card-content">
-                <span class="card-title activator grey-text text-darken-4">Card Titlemore_vert</i></span>
+                <span class="card-title activator grey-text text-darken-4">Card Titlemore_vert</span>
                 <p><a href="#">This is a link</a></p>
               </div>
               <div class="card-reveal">
-                <span class="card-title grey-text text-darken-4">Card Titleclose</i></span>
+                <span class="card-title grey-text text-darken-4">Card Titleclose</span>
                 <p>Here is some more information about this product that is only revealed once clicked on.</p>
               </div>
             </div>
           </div>
-        </div>
-        <div class="row">
-          <div class="col-md-3">
+          <div class="col-md-4">
             <div class="card">
               <div class="card-image waves-effect waves-block waves-light">
                 <img class="activator" src="images/assets/products/backpack.png">
               </div>
               <div class="card-content">
-                <span class="card-title activator grey-text text-darken-4">Card Titlemore_vert</i></span>
+                <span class="card-title activator grey-text text-darken-4">Card Titlemore_vert</span>
                 <p><a href="#">This is a link</a></p>
               </div>
               <div class="card-reveal">
-                <span class="card-title grey-text text-darken-4">Card Titleclose</i></span>
+                <span class="card-title grey-text text-darken-4">Card Titleclose</span>
                 <p>Here is some more information about this product that is only revealed once clicked on.</p>
               </div>
             </div>
           </div>
-        </div>
-      </div>
+          </div>
       <div class="wrap">
         <div class="text">TEXT GOES HERE</div>
       </div>
@@ -194,7 +194,7 @@
     <div class="section4">
       <div class="about">
         <p align="center" >ABOUT US </p>
-        <p align="center">This is where high-fashioned clothing is designed and crafted from the heart by an amazing team of craftsmen and designers who undersytand what fashion is.</p>
+        <p align="center">This is where high-fashioned clothing is<br> designed and crafted from the heart by<br> an amazing team of craftsmen and<br> designers who undersytand what fashion<br> is.</p>
       </div>
     </div>
   </div>
