--- a/Assignment_1/index.html
+++ b/Assignment_1/index.html
@@ -203,7 +203,7 @@
 <!-- this is the beginning of section 5 -->
 <div class="section">
   <div class="section 5">
-    <div style="background-color: grey">
+    <div style="background-color: grey" id="nav">
       <div class="divider"></div>
       <p align="center"><img src="images/assets/social_icons/twitter.png">"SALE:Buy anything for 45% off. Use the promo CODE YOLOMY45 when you buy items."</p>
     </div>
