--- a/Assignment_1/index.html
+++ b/Assignment_1/index.html
@@ -214,7 +214,7 @@
   <!-- this is the beginning of section 6 -->
   <div class="section">
   <div class="section 6">
-  <div style="background-color: black">
+  <div style="background-color: black" id="footer">
   <div class="divider"></div>
   <div class="row">
     <div class="col s4"><span class="white-text" >YOLOMY <br> WE ARE YOLOMY-WE UNDERSTAND FASHION AND STYLE.WE CRAFT OUR PRODUCTS WITH LOVE AND DILIGENCE.</span>
@@ -223,7 +223,7 @@
       <img src="images/assets/social_icons/g_plus.png">
       <img src="images/assets/social_icons/facebook.png">
       <img src="images/assets/social_icons/you_tube.png">
-      <img src="images/assets/social_icons/stumble_upon.png">
+      <img src="images/assets/social_icons/stumble_upon.png"><br>
       <img src="images/assets/social_icons/skype.png">
       <img src="images/assets/social_icons/flickr.png">
       <img src="images/assets/social_icons/twitter_bird.png">
@@ -234,6 +234,9 @@
       CREDITS|PRIVACY|ABOUT|CONTACT<br> Yolomy:We Mean Fashion
       </span>
     </div>
+  </div>
+  </div>
+  </div>
   </div>
 </footer>
 </html>
