--- a/Assignment_1/index.html
+++ b/Assignment_1/index.html
@@ -217,9 +217,9 @@
   <div style="background-color: black" id="footer">
   <div class="divider"></div>
   <div class="row">
-    <div class="col s4"><span class="white-text" >YOLOMY <br> WE ARE YOLOMY-WE UNDERSTAND FASHION AND STYLE.WE CRAFT OUR PRODUCTS WITH LOVE AND DILIGENCE.</span>
+    <div class="col-md-4"><span class="white-text" >YOLOMY <br> WE ARE YOLOMY-WE UNDERSTAND FASHION AND STYLE.WE CRAFT OUR PRODUCTS WITH LOVE AND DILIGENCE.</span>
     </div>
-    <div class="col s4"> <span class="white-text">We are social <br>
+    <div class="col-md-4"> <span class="white-text">We are social <br>
       <img src="images/assets/social_icons/g_plus.png">
       <img src="images/assets/social_icons/facebook.png">
       <img src="images/assets/social_icons/you_tube.png">
@@ -229,9 +229,9 @@
       <img src="images/assets/social_icons/twitter_bird.png">
       <img src="images/assets/social_icons/pinterest.png">
     </div>
-    <div class="col s4">
+    <div class="col-md-4">
       <span class="white-text "> 
-      CREDITS|PRIVACY|ABOUT|CONTACT<br> Yolomy:We Mean Fashion
+      CREDITS | PRIVACY | ABOUT | CONTACT<br> Yolomy:We Mean Fashion
       </span>
     </div>
   </div>
