added h4 n p in the footer

--- a/Assignment_1/index.html
+++ b/Assignment_1/index.html
@@ -230,8 +230,8 @@
       <img src="images/assets/social_icons/pinterest.png">
     </div>
     <div class="col-md-4">
-      <span class="white-text "> 
-      CREDITS | PRIVACY | ABOUT | CONTACT<br> Yolomy:We Mean Fashion
+      <span class="white-text"> 
+      <p>CREDITS | PRIVACY | ABOUT | CONTACT<br></p> <h4>Yolomy: We Mean Fashion</h4>
       </span>
     </div>
   </div>
