--- a/Assignment_1/index.html
+++ b/Assignment_1/index.html
@@ -27,9 +27,8 @@
     </nav>
     <!-- this is the beginning of section 1-->
     <div class="section">
-      <h1 align="center">Our clothing , your comfort</h1>
-      <p align="center">We understand that you need to look good and feel great.</p>
-      <p align="center">It all starts with what you are wearing.</p>
+      <h1>Our clothing , your comfort</h1>
+      <p>We understand that you need to look good and feel great.<br>It all starts with what you are wearing.</p>
     </div>
     </div>
   </div>
@@ -37,8 +36,8 @@
   <div class="section" id="panel">
     <div class="section 2">
       <div class="card-panel grey" id="panel1">
-        <div class="row" id="gender">
-          <form action="#"></form>
+        <div class="row">
+          <!--<form action="#"></form>-->
           <div class="col-md-6">
             <input type="checkbox" id="test5"/>
             <label for="test5"><span class="black-text text-darken-2">Men</label></span>
@@ -48,13 +47,8 @@
             <label for="test5"><span class="black-text text-darken-2">Children</span></label>
           </div>
           <div class="col-md-6" align="right">
-            <a class="waves-effect waves-light btn"; "left"; >see allproducts</a>
+            <a class="waves-effect waves-light btn";"left";>see allproducts</a>
           </div>
-        </div>
-
-      </div>
-    </div>
-  </div>
     <!-- this is the beginning of section 3 -->
     <div class="row">
       <div class="section">
@@ -193,8 +187,10 @@
   <div class="section">
     <div class="section4">
       <div class="about">
+        <div class="boxed">
         <p align="center" >ABOUT US </p>
         <p align="center">This is where high-fashioned clothing is<br> designed and crafted from the heart by<br> an amazing team of craftsmen and<br> designers who undersytand what fashion<br> is.</p>
+        </div>
       </div>
     </div>
   </div>
