added ids and paddings on footer

--- a/Assignment_1/index.html
+++ b/Assignment_1/index.html
@@ -199,40 +199,44 @@
 <!-- this is the beginning of section 5 -->
 <div class="section">
   <div class="section 5">
-    <div style="background-color: grey" id="nav">
+    <div class="nospace">
+    <div style="background-color: rgb(100, 100, 107)" id="nav">
       <div class="divider"></div>
       <p align="center"><img src="images/assets/social_icons/twitter.png">"SALE:Buy anything for 45% off. Use the promo CODE YOLOMY45 when you buy items."</p>
     </div>
+    </div>
+    </div>
   </div>
-</div>
+
 </body>
 <footer>
   <!-- this is the beginning of section 6 -->
-  <div class="section">
-  <div class="section 6">
-  <div style="background-color: black" id="footer">
+  <!--<div class="section">
+  <div class="section 6">-->
+  <div style="background-color: rgb(59, 59, 63)" id="footer">
   <div class="divider"></div>
   <div class="row">
-    <div class="col-md-4"><span class="white-text" >YOLOMY <br> WE ARE YOLOMY-WE UNDERSTAND FASHION AND STYLE.WE CRAFT OUR PRODUCTS WITH LOVE AND DILIGENCE.</span>
+    <div class="col-md-4"><span class="white-text"><h5>YOLOMY</h5><br><p>WE ARE YOLOMY- WE UNDERSTAND FASHION AND STYLE. WE CRAFT OUR PRODUCTS WITH LOVE AND DILIGENCE.</p></span>
     </div>
-    <div class="col-md-4"> <span class="white-text">We are social <br>
+    <div class="col-md-4" id="ft"><span class="white-text1"><p>We are social</p><br>
       <img src="images/assets/social_icons/g_plus.png">
-      <img src="images/assets/social_icons/facebook.png">
-      <img src="images/assets/social_icons/you_tube.png">
+      <img src="images/assets/social_icons/facebook.png" id="img2">
+      <img src="images/assets/social_icons/you_tube.png" id="img3">
       <img src="images/assets/social_icons/stumble_upon.png"><br>
-      <img src="images/assets/social_icons/skype.png">
-      <img src="images/assets/social_icons/flickr.png">
-      <img src="images/assets/social_icons/twitter_bird.png">
-      <img src="images/assets/social_icons/pinterest.png">
+      <img src="images/assets/social_icons/skype.png" id="img4">
+      <img src="images/assets/social_icons/flickr.png" id="img5">
+      <img src="images/assets/social_icons/twitter_bird.png" id="img6">
+      <img src="images/assets/social_icons/pinterest.png" id="img7">
+      </span>
     </div>
     <div class="col-md-4">
-      <span class="white-text"> 
+      <span class="white-text2"> 
       <p>CREDITS | PRIVACY | ABOUT | CONTACT<br></p> <h4>Yolomy: We Mean Fashion</h4>
       </span>
     </div>
   </div>
   </div>
-  </div>
-  </div>
+  <!--</div>
+  </div>-->
 </footer>
 </html>
