--- a/Assignment_1/index.html
+++ b/Assignment_1/index.html
@@ -216,7 +216,7 @@
   <div style="background-color: rgb(59, 59, 63)" id="footer">
   <div class="divider"></div>
   <div class="row">
-    <div class="col-md-4"><span class="white-text"><h5>YOLOMY</h5><br><p>WE ARE YOLOMY- WE UNDERSTAND FASHION AND STYLE. WE CRAFT OUR PRODUCTS WITH LOVE AND DILIGENCE.</p></span>
+    <div class="col-md-4" id="YM"><span class="white-text"><h5>YOLOMY</h5><br><p>WE ARE YOLOMY- WE UNDERSTAND FASHION AND STYLE. WE CRAFT OUR PRODUCTS WITH LOVE AND DILIGENCE.</p></span>
     </div>
     <div class="col-md-4" id="ft"><span class="white-text1"><p>We are social</p><br>
       <img src="images/assets/social_icons/g_plus.png">
