correctly placed footer image

--- a/Assignment_1/index.html
+++ b/Assignment_1/index.html
@@ -202,7 +202,7 @@
     <div class="nospace">
     <div style="background-color: rgb(100, 100, 107)" id="nav">
       <div class="divider"></div>
-      <p align="center"><img src="images/assets/social_icons/twitter.png">"SALE:Buy anything for 45% off. Use the promo CODE YOLOMY45 when you buy items."</p>
+      <p align="center"><img src="images/assets/social_icons/twitter_bird.png">"SALE:Buy anything for 45% off. Use the promo CODE YOLOMY45 when you buy items."</p>
     </div>
     </div>
     </div>
@@ -213,7 +213,7 @@
   <!-- this is the beginning of section 6 -->
   <!--<div class="section">
   <div class="section 6">-->
-  <div style="background-color: rgb(59, 59, 63)" id="footer">
+  <div style="background-color: rgb(65, 65, 75)" id="footer">
   <div class="divider"></div>
   <div class="row">
     <div class="col-md-4" id="YM"><span class="white-text"><h5>YOLOMY</h5><br><p>WE ARE YOLOMY- WE UNDERSTAND FASHION AND STYLE. WE CRAFT OUR PRODUCTS WITH LOVE AND DILIGENCE.</p></span>
@@ -225,9 +225,10 @@
       <img src="images/assets/social_icons/stumble_upon.png"><br>
       <img src="images/assets/social_icons/skype.png" id="img4">
       <img src="images/assets/social_icons/flickr.png" id="img5">
-      <img src="images/assets/social_icons/twitter_bird.png" id="img6">
+      <img src="images/assets/social_icons/twitter.png" id="img6">
       <img src="images/assets/social_icons/pinterest.png" id="img7">
       </span>
+      <div class="cp"><h6>COPYRIGHT 2015.YOLOMY INC</h6></div>
     </div>
     <div class="col-md-4">
       <span class="white-text2"> 
