added padding on section 5

--- a/Assignment_1/index.html
+++ b/Assignment_1/index.html
@@ -49,6 +49,10 @@
           <div class="col-md-6" align="right">
             <a class="waves-effect waves-light btn";"left";>see allproducts</a>
           </div>
+        </div>
+      </div>
+    </div>
+  </div>        
     <!-- this is the beginning of section 3 -->
     <div class="row">
       <div class="section">
@@ -200,9 +204,9 @@
 <div class="section">
   <div class="section 5">
     <div class="nospace">
-    <div style="background-color: rgb(100, 100, 107)" id="nav">
+    <div style="background-color: rgb(85, 85, 85)" id="nav">
       <div class="divider"></div>
-      <p align="center"><img src="images/assets/social_icons/twitter_bird.png">"SALE:Buy anything for 45% off. Use the promo CODE YOLOMY45 when you buy items."</p>
+      <p align="center"><img src="images/assets/social_icons/twitter_bird.png">SALE:Buy anything for 45% off. Use the promo CODE YOLOMY45 when you buy items."</p>
     </div>
     </div>
     </div>
@@ -213,7 +217,7 @@
   <!-- this is the beginning of section 6 -->
   <!--<div class="section">
   <div class="section 6">-->
-  <div style="background-color: rgb(65, 65, 75)" id="footer">
+  <div style="background-color: rgb(58, 58, 59)" id="footer">
   <div class="divider"></div>
   <div class="row">
     <div class="col-md-4" id="YM"><span class="white-text"><h5>YOLOMY</h5><br><p>WE ARE YOLOMY- WE UNDERSTAND FASHION AND STYLE. WE CRAFT OUR PRODUCTS WITH LOVE AND DILIGENCE.</p></span>
