arranged section 3 images

--- a/Assignment_1/index.html
+++ b/Assignment_1/index.html
@@ -38,7 +38,7 @@
       <div class="card-panel grey" id="panel1">
         <div class="row">
           <!--<form action="#"></form>-->
-          <div class="col-md-6">
+          <div class="col-md-6" id="box">
             <input type="checkbox" id="test5"/>
             <label for="test5"><span class="black-text text-darken-2">Men</label></span>
             <input type="checkbox" id="test5"/>
@@ -55,8 +55,8 @@
   </div>        
     <!-- this is the beginning of section 3 -->
     <div class="row">
-      <div class="section">
-        <div class="men">
+    <!--  <div class="section">
+        <div class="men">-->
           <div class="col-md-4">
             <div class="card">
               <div class="card-image waves-effect waves-block waves-light">
@@ -71,9 +71,7 @@
                 <p>Here is some more information about this product that is only revealed once clicked on.</p>
               </div>
             </div>
-            </div>
-          </div>
-        </div>      
+            </div>     
           <div class="col-md-4">
             <div class="card">
               <div class="card-image waves-effect waves-block waves-light">
