--- a/Assignment_1/index.html
+++ b/Assignment_1/index.html
@@ -56,18 +56,18 @@
     <!-- this is the beginning of section 3 -->
     <div class="row">
           <div class="col-md-4">
-            <div class="card">
+            <div class="card" id="box">
               <div class="card-image waves-effect waves-block waves-light">
               <img class="activator" src="images/assets/products/tshirt.png" id="shirt">
               </div>
-              <div class="card-content" id="card">
-                <span class="card-title activator grey-text text-darken-4">T-SHIRT</span>
-                <p><a href="#">5,00</a></p>
+              <div class="card-content" id="shadow">
+                <span class="card-title activator grey-text text-darken-4"><strong>T-SHIRT</strong></span>
+                <p><strong>5,00€</strong></p>
               </div>
-              <div class="card-reveal">
+              <!--<div class="card-reveal">
                 <span class="card-title grey-text text-darken-4">Card Titleclose</span>
                 <p>Here is some more information about this product that is only revealed once clicked on.</p>
-              </div>
+              </div>-->
             </div>
             </div>
           <div class="col-md-4">
@@ -75,14 +75,14 @@
               <div class="card-image waves-effect waves-block waves-light">
                 <img class="activator" src="images/assets/products/pants.png" id="pants">
               </div>
-              <div class="card-content">
-                <span class="card-title activator grey-text text-darken-4">Card Titlemore_vert</span>
-                <p><a href="#">This is a link</a></p>
+              <div class="card-content" id="card">
+                <span class="card-title activator grey-text text-darken-4">PANTS FORCLAS</span>
+                <p>30,00€</p>
               </div>
-              <div class="card-reveal">
+              <!--<div class="card-reveal">
                 <span class="card-title grey-text text-darken-4">Card Titleclose</span>
                 <p>Here is some more information about this product that is only revealed once clicked on.</p>
-              </div>
+              </div>-->
             </div>
           </div>
           <div class="col-md-4">
