added ids in section 3 and styling second image

--- a/Assignment_1/index.html
+++ b/Assignment_1/index.html
@@ -71,13 +71,13 @@
             </div>
             </div>
           <div class="col-md-4">
-            <div class="card">
+            <div class="card" id="box1">
               <div class="card-image waves-effect waves-block waves-light">
                 <img class="activator" src="images/assets/products/pants.png" id="pants">
               </div>
               <div class="card-content" id="card">
-                <span class="card-title activator grey-text text-darken-4">PANTS FORCLAS</span>
-                <p>30,00€</p>
+                <span class="card-title activator grey-text text-darken-4"><strong>PANTS FORCLAS</span></strong>
+                <p><strong>30,00€</strong></p>
               </div>
               <!--<div class="card-reveal">
                 <span class="card-title grey-text text-darken-4">Card Titleclose</span>
