--- a/Assignment_1/index.html
+++ b/Assignment_1/index.html
@@ -86,18 +86,18 @@
             </div>
           </div>
           <div class="col-md-4">
-            <div class="card">
+            <div class="card" id="box2">
               <div class="card-image waves-effect waves-block waves-light">
                 <img class="activator" src="images/assets/products/backpack.png" id="bag">
               </div>
-              <div class="card-content">
-                <span class="card-title activator grey-text text-darken-4">Card Titlemore_vert</span>
-                <p><a href="#">This is a link</a></p>
+              <div class="card-content" id="content">
+                <span class="card-title activator grey-text text-darken-4">BAG PACK</span>
+                <p>60,00€</p>
               </div>
-              <div class="card-reveal">
+              <!--<div class="card-reveal">
                 <span class="card-title grey-text text-darken-4">Card Titleclose</span>
                 <p>Here is some more information about this product that is only revealed once clicked on.</p>
-              </div>
+              </div>-->
             </div>
           </div>
           </div>
