added rows and columns

--- a/Assignment_1/index.html
+++ b/Assignment_1/index.html
@@ -54,7 +54,7 @@
     </div>
   </div>        
     <!-- this is the beginning of section 3 -->
-    <div class="row">
+        <div class="row">
           <div class="col-md-4">
             <div class="card" id="box">
               <div class="card-image waves-effect waves-block waves-light">
@@ -91,8 +91,8 @@
                 <img class="activator" src="images/assets/products/backpack.png" id="bag">
               </div>
               <div class="card-content" id="content">
-                <span class="card-title activator grey-text text-darken-4">BAG PACK</span>
-                <p>60,00€</p>
+                <span class="card-title activator grey-text text-darken-4"><strong>BAG PACK</strong></span>
+                <p><strong>60,00€</strong></p>
               </div>
               <!--<div class="card-reveal">
                 <span class="card-title grey-text text-darken-4">Card Titleclose</span>
@@ -100,96 +100,77 @@
               </div>-->
             </div>
           </div>
-          </div>
-      <div class="wrap">
-        <div class="text">TEXT GOES HERE</div>
-      </div>
-      <div class="card small">
-        <div class="card">
-          <div class="card-image waves-effect waves-block waves-light">
-            <img class="activator" src="images/assets/products/backpack.png">
-          </div>
-          <div class="card-content">
-            <span class="card-title activator grey-text text-darken-4">Card Titlemore_vert</i></span>
-            <p><a href="#">This is a link</a></p>
-          </div>
-          <div class="card-reveal">
-            <span class="card-title grey-text text-darken-4">Card Titleclose</i></span>
-            <p>Here is some more information about this product that is only revealed once clicked on.</p>
+        </div>
+      <div class="row">
+        <div class="wrap">
+          <div class="col-md-12">
+            <strong><p>WOMEN</p></strong>
           </div>
         </div>
       </div>
-    </div>
-    <div class="card small">
+  <div class="row"> 
+    <div class="col-md-4"> 
+  <!--  <div class="card small">-->
       <div class="ladies">
         <div class="card">
           <div class="card-image waves-effect waves-block waves-light">
-            <img class="activator" src="images/assets/products/giacket.png">
+            <img class="activator" src="images/assets/products/giacket.png" id="jacket">
           </div>
           <div class="card-content">
-            <span class="card-title activator grey-text text-darken-4">Card Titlemore_vert</i></span>
-            <p><a href="#">This is a link</a></p>
+            <span class="card-title activator grey-text text-darken-4"><strong>GIACKET</strong></span>
+            <p><strong>60,00€</strong></p>
           </div>
-          <div class="card-reveal">
+          <!--<div class="card-reveal">
             <span class="card-title grey-text text-darken-4">Card Titleclose</i></span>
             <p>Here is some more information about this product that is only revealed once clicked on.</p>
-          </div>
+          </div>-->
         </div>
       </div>
-      <div class="card small">
-        <div class="card">
-          <div class="card-image waves-effect waves-block waves-light">
-            <img class="activator" src="images/assets/products/tshirt.png">
-          </div>
-          <div class="card-content">
-            <span class="card-title activator grey-text text-darken-4">Card Titlemore_vert</i></span>
-            <p><a href="#">This is a link</a></p>
-          </div>
-          <div class="card-reveal">
-            <span class="card-title grey-text text-darken-4">Card Titleclose</i></span>
-            <p>Here is some more information about this product that is only revealed once clicked on.</p>
-          </div>
-        </div>
-      </div>
+    <!--  </div>-->
+    </div>
+      <div class="col-md-4">
       <div class="card small">
         <div class="card">
           <div class="card-image waves-effect waves-block waves-light">
             <img class="activator" src="images/assets/products/trekkingshoes.png">
           </div>
           <div class="card-content">
-            <span class="card-title activator grey-text text-darken-4">Card Titlemore_vert</i></span>
-            <p><a href="#">This is a link</a></p>
+            <span class="card-title activator grey-text text-darken-4">TREKKING SHOES</span>
+            <p>80,00€</p>
           </div>
-          <div class="card-reveal">
+          <!--<div class="card-reveal">
+            <span class="card-title grey-text text-darken-4">Card Title</span>
+            <p>Here is some more information about this product that is only revealed once clicked on.</p>
+          </div>-->
+        </div>
+      </div>
+      </div>
+      <div class="col-md-4">
+      <div class="card small">
+        <div class="card">
+          <div class="card-image waves-effect waves-block waves-light">
+            <img class="activator" src="images/assets/products/tshirt_ladies.png">
+          </div>
+          <div class="card-content">
+            <span class="card-title activator grey-text text-darken-4"><strong>T-SHIRT</strong></span>
+            <p><strong>20,00€</strong></p>
+          </div>
+          </div>
+         <!-- <div class="card-reveal">
             <span class="card-title grey-text text-darken-4">Card Titleclose</i></span>
             <p>Here is some more information about this product that is only revealed once clicked on.</p>
-          </div>
+          </div>-->
         </div>
       </div>
-      <div class="card">
-        <div class="card-image waves-effect waves-block waves-light">
-          <img class="activator" src="images/assets/products/tshirt_ladies.png">
-        </div>
-        <div class="card-content">
-          <span class="card-title activator grey-text text-darken-4">Card Titlemore_vert</i></span>
-          <p><a href="#">This is a link</a></p>
-        </div>
-        <div class="card-reveal">
-          <span class="card-title grey-text text-darken-4">Card Titleclose</i></span>
-          <p>Here is some more information about this product that is only revealed once clicked on.</p>
-        </div>
       </div>
-    </div>
-  </div>
-  </div>
-  </div>
+
   <!-- this is the beginning of section 4 -->
   <div class="section">
     <div class="section4">
       <div class="about">
         <div class="boxed">
         <p align="center" >ABOUT US </p>
-        <p align="center">This is where high-fashioned clothing is<br> designed and crafted from the heart by<br> an amazing team of craftsmen and<br> designers who undersytand what fashion<br> is.</p>
+        <p align="center">This is where high-fashioned clothing is<br> designed and crafted from the heart by<br> an amazing team of craftsmen and<br> designers who understand what fashion<br> is.</p>
         </div>
       </div>
     </div>
