added divs to womans wear and added paddings and height on first image

--- a/Assignment_1/index.html
+++ b/Assignment_1/index.html
@@ -112,11 +112,11 @@
     <div class="col-md-4"> 
   <!--  <div class="card small">-->
       <div class="ladies">
-        <div class="card">
+        <div class="card" id="jt">
           <div class="card-image waves-effect waves-block waves-light">
             <img class="activator" src="images/assets/products/giacket.png" id="jacket">
           </div>
-          <div class="card-content">
+          <div class="card-content" id="jtcontent">
             <span class="card-title activator grey-text text-darken-4"><strong>GIACKET</strong></span>
             <p><strong>60,00€</strong></p>
           </div>
