added divs to womens wear and added paddings and height to the second image

--- a/Assignment_1/index.html
+++ b/Assignment_1/index.html
@@ -129,21 +129,19 @@
     <!--  </div>-->
     </div>
       <div class="col-md-4">
-      <div class="card small">
-        <div class="card">
+        <div class="card" id="trekking">
           <div class="card-image waves-effect waves-block waves-light">
-            <img class="activator" src="images/assets/products/trekkingshoes.png">
+            <img class="activator" src="images/assets/products/trekkingshoes.png" id="shoes">
           </div>
-          <div class="card-content">
-            <span class="card-title activator grey-text text-darken-4">TREKKING SHOES</span>
-            <p>80,00€</p>
+          <div class="card-content" id="TS">
+            <span class="card-title activator grey-text text-darken-4"><strong>TREKKING SHOES</strong></span>
+            <p><strong>80,00€</strong></p>
           </div>
           <!--<div class="card-reveal">
             <span class="card-title grey-text text-darken-4">Card Title</span>
             <p>Here is some more information about this product that is only revealed once clicked on.</p>
           </div>-->
         </div>
-      </div>
       </div>
       <div class="col-md-4">
       <div class="card small">
