--- a/Assignment_1/index.html
+++ b/Assignment_1/index.html
@@ -144,12 +144,11 @@
         </div>
       </div>
       <div class="col-md-4">
-      <div class="card small">
-        <div class="card">
+        <div class="card" id="Tbox">
           <div class="card-image waves-effect waves-block waves-light">
-            <img class="activator" src="images/assets/products/tshirt_ladies.png">
+            <img class="activator" src="images/assets/products/tshirt_ladies.png" id="Tshirt">
           </div>
-          <div class="card-content">
+          <div class="card-content" id="SHIRT">
             <span class="card-title activator grey-text text-darken-4"><strong>T-SHIRT</strong></span>
             <p><strong>20,00€</strong></p>
           </div>
@@ -158,7 +157,6 @@
             <span class="card-title grey-text text-darken-4">Card Titleclose</i></span>
             <p>Here is some more information about this product that is only revealed once clicked on.</p>
           </div>-->
-        </div>
       </div>
       </div>
 
