--- a/Assignment_1/index.html
+++ b/Assignment_1/index.html
@@ -13,7 +13,6 @@
 <!-- this is the beginning of the navbar-->
 <body>
   <div class="part1">
-    <div class="row">
     <div class="divider"></div>
     <nav style="background-color: transparent;">
       <div class="nav-wrapper">
@@ -27,147 +26,175 @@
     </nav>
     <!-- this is the beginning of section 1-->
     <div class="section">
-      <h1>Our clothing , your comfort</h1>
-      <p>We understand that you need to look good and feel great.<br>It all starts with what you are wearing.</p>
-    </div>
+      <h1 align="center">Our clothing , your comfort</h1>
+      <p align="center">We understand that you need to look good and feel great.</p>
+      <p align="center">It all starts with what you are wearing.</p>
     </div>
   </div>
   <!-- this is the beginning of section 2 -->
-  <div class="section" id="panel">
+  <div class="section">
     <div class="section 2">
-      <div class="card-panel grey" id="panel1">
+      <div class="card-panel grey">
         <div class="row">
-          <!--<form action="#"></form>-->
-          <div class="col-md-6" id="box">
-            <input type="checkbox" id="test5"/>
-            <label for="test5"><span class="black-text text-darken-2">Men</label></span>
-            <input type="checkbox" id="test5"/>
-            <label for="test5"><span class="black-text text-darken-2">Women</span></label>
-            <input type="checkbox" id="test5"/>
-            <label for="test5"><span class="black-text text-darken-2">Children</span></label>
-          </div>
-          <div class="col-md-6" align="right">
-            <a class="waves-effect waves-light btn";"left";>see allproducts</a>
-          </div>
+          <form action="#">
+            <div class="col s6">
+              <input type="checkbox" id="test5"/>
+              <label for="test5"><span class="black-text text-darken-2">Men</label></span>
+              <input type="checkbox" id="test5"/>
+              <label for="test5"><span class="black-text text-darken-2">Women</label></span>
+              <input type="checkbox" id="test5"/>
+              <label for="test5"><span class="black-text text-darken-2">Children</label></span>
+            </div>
+            <div class="col s6 " align="right">
+              <a  class="waves-effect waves-light btn"; "left"; >See all products</a>
+            </div>
+          </form>
         </div>
       </div>
     </div>
-  </div>        
     <!-- this is the beginning of section 3 -->
+    <div class="section">
+      <div class="men">
         <div class="row">
-          <div class="col-md-4">
-            <div class="card" id="box">
+          <div class="col s3 m3">
+            <div class="card">
               <div class="card-image waves-effect waves-block waves-light">
-              <img class="activator" src="images/assets/products/tshirt.png" id="shirt">
+                <img class="activator" src="images/assets/products/tshirt.png">
               </div>
-              <div class="card-content" id="shadow">
-                <span class="card-title activator grey-text text-darken-4"><strong>T-SHIRT</strong></span>
-                <p><strong>5,00€</strong></p>
+              <div class="card-content">
+                <span class="card-title activator grey-text text-darken-4">Card Titlemore_vert</i></span>
+                <p><a href="#">This is a link</a></p>
               </div>
-              <!--<div class="card-reveal">
-                <span class="card-title grey-text text-darken-4">Card Titleclose</span>
+              <div class="card-reveal">
+                <span class="card-title grey-text text-darken-4">Card Titleclose</i></span>
                 <p>Here is some more information about this product that is only revealed once clicked on.</p>
-              </div>-->
-            </div>
-            </div>
-          <div class="col-md-4">
-            <div class="card" id="box1">
-              <div class="card-image waves-effect waves-block waves-light">
-                <img class="activator" src="images/assets/products/pants.png" id="pants">
               </div>
-              <div class="card-content" id="card">
-                <span class="card-title activator grey-text text-darken-4"><strong>PANTS FORCLAS</span></strong>
-                <p><strong>30,00€</strong></p>
-              </div>
-              <!--<div class="card-reveal">
-                <span class="card-title grey-text text-darken-4">Card Titleclose</span>
-                <p>Here is some more information about this product that is only revealed once clicked on.</p>
-              </div>-->
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="card" id="box2">
-              <div class="card-image waves-effect waves-block waves-light">
-                <img class="activator" src="images/assets/products/backpack.png" id="bag">
-              </div>
-              <div class="card-content" id="content">
-                <span class="card-title activator grey-text text-darken-4"><strong>BAG PACK</strong></span>
-                <p><strong>60,00€</strong></p>
-              </div>
-              <!--<div class="card-reveal">
-                <span class="card-title grey-text text-darken-4">Card Titleclose</span>
-                <p>Here is some more information about this product that is only revealed once clicked on.</p>
-              </div>-->
             </div>
           </div>
         </div>
-      <div class="row">
-        <div class="wrap">
-          <div class="col-md-12">
-            <strong><p>WOMEN</p></strong>
+        <div class="row">
+          <div class="col s3 m3">
+            <div class="card">
+              <div class="card-image waves-effect waves-block waves-light">
+                <img class="activator" src="images/assets/products/pants.png">
+              </div>
+              <div class="card-content">
+                <span class="card-title activator grey-text text-darken-4">Card Titlemore_vert</i></span>
+                <p><a href="#">This is a link</a></p>
+              </div>
+              <div class="card-reveal">
+                <span class="card-title grey-text text-darken-4">Card Titleclose</i></span>
+                <p>Here is some more information about this product that is only revealed once clicked on.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col s3 m3">
+            <div class="card">
+              <div class="card-image waves-effect waves-block waves-light">
+                <img class="activator" src="images/assets/products/backpack.png">
+              </div>
+              <div class="card-content">
+                <span class="card-title activator grey-text text-darken-4">Card Titlemore_vert</i></span>
+                <p><a href="#">This is a link</a></p>
+              </div>
+              <div class="card-reveal">
+                <span class="card-title grey-text text-darken-4">Card Titleclose</i></span>
+                <p>Here is some more information about this product that is only revealed once clicked on.</p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
-  <div class="row"> 
-    <div class="col-md-4"> 
-  <!--  <div class="card small">-->
-      <div class="ladies">
-        <div class="card" id="jt">
+      <div class="wrap">
+        <div class="text">TEXT GOES HERE</div>
+      </div>
+      <div class="card small">
+        <div class="card">
           <div class="card-image waves-effect waves-block waves-light">
-            <img class="activator" src="images/assets/products/giacket.png" id="jacket">
+            <img class="activator" src="images/assets/products/backpack.png">
           </div>
-          <div class="card-content" id="jtcontent">
-            <span class="card-title activator grey-text text-darken-4"><strong>GIACKET</strong></span>
-            <p><strong>60,00€</strong></p>
+          <div class="card-content">
+            <span class="card-title activator grey-text text-darken-4">Card Titlemore_vert</i></span>
+            <p><a href="#">This is a link</a></p>
           </div>
-          <!--<div class="card-reveal">
+          <div class="card-reveal">
             <span class="card-title grey-text text-darken-4">Card Titleclose</i></span>
             <p>Here is some more information about this product that is only revealed once clicked on.</p>
-          </div>-->
+          </div>
         </div>
       </div>
-    <!--  </div>-->
     </div>
-      <div class="col-md-4">
-        <div class="card" id="trekking">
+    <div class="card small">
+      <div class="ladies">
+        <div class="card">
           <div class="card-image waves-effect waves-block waves-light">
-            <img class="activator" src="images/assets/products/trekkingshoes.png" id="shoes">
+            <img class="activator" src="images/assets/products/giacket.png">
           </div>
-          <div class="card-content" id="TS">
-            <span class="card-title activator grey-text text-darken-4"><strong>TREKKING SHOES</strong></span>
-            <p><strong>80,00€</strong></p>
+          <div class="card-content">
+            <span class="card-title activator grey-text text-darken-4">Card Titlemore_vert</i></span>
+            <p><a href="#">This is a link</a></p>
           </div>
-          <!--<div class="card-reveal">
-            <span class="card-title grey-text text-darken-4">Card Title</span>
-            <p>Here is some more information about this product that is only revealed once clicked on.</p>
-          </div>-->
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="card" id="Tbox">
-          <div class="card-image waves-effect waves-block waves-light">
-            <img class="activator" src="images/assets/products/tshirt_ladies.png" id="Tshirt">
-          </div>
-          <div class="card-content" id="SHIRT">
-            <span class="card-title activator grey-text text-darken-4"><strong>T-SHIRT</strong></span>
-            <p><strong>20,00€</strong></p>
-          </div>
-          </div>
-         <!-- <div class="card-reveal">
+          <div class="card-reveal">
             <span class="card-title grey-text text-darken-4">Card Titleclose</i></span>
             <p>Here is some more information about this product that is only revealed once clicked on.</p>
-          </div>-->
+          </div>
+        </div>
       </div>
+      <div class="card small">
+        <div class="card">
+          <div class="card-image waves-effect waves-block waves-light">
+            <img class="activator" src="images/assets/products/tshirt.png">
+          </div>
+          <div class="card-content">
+            <span class="card-title activator grey-text text-darken-4">Card Titlemore_vert</i></span>
+            <p><a href="#">This is a link</a></p>
+          </div>
+          <div class="card-reveal">
+            <span class="card-title grey-text text-darken-4">Card Titleclose</i></span>
+            <p>Here is some more information about this product that is only revealed once clicked on.</p>
+          </div>
+        </div>
       </div>
-
+      <div class="card small">
+        <div class="card">
+          <div class="card-image waves-effect waves-block waves-light">
+            <img class="activator" src="images/assets/products/trekkingshoes.png">
+          </div>
+          <div class="card-content">
+            <span class="card-title activator grey-text text-darken-4">Card Titlemore_vert</i></span>
+            <p><a href="#">This is a link</a></p>
+          </div>
+          <div class="card-reveal">
+            <span class="card-title grey-text text-darken-4">Card Titleclose</i></span>
+            <p>Here is some more information about this product that is only revealed once clicked on.</p>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="card-image waves-effect waves-block waves-light">
+          <img class="activator" src="images/assets/products/tshirt_ladies.png">
+        </div>
+        <div class="card-content">
+          <span class="card-title activator grey-text text-darken-4">Card Titlemore_vert</i></span>
+          <p><a href="#">This is a link</a></p>
+        </div>
+        <div class="card-reveal">
+          <span class="card-title grey-text text-darken-4">Card Titleclose</i></span>
+          <p>Here is some more information about this product that is only revealed once clicked on.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  </div>
+  </div>
   <!-- this is the beginning of section 4 -->
   <div class="section">
     <div class="section4">
       <div class="about">
-        <div class="boxed">
         <p align="center" >ABOUT US </p>
-        <p align="center">This is where high-fashioned clothing is<br> designed and crafted from the heart by<br> an amazing team of craftsmen and<br> designers who understand what fashion<br> is.</p>
-        </div>
+        <p align="center">This is where high-fashioned clothing is designed and crafted from the heart by an amazing team of craftsmen and designers who undersytand what fashion is.</p>
       </div>
     </div>
   </div>
@@ -176,45 +203,37 @@
 <!-- this is the beginning of section 5 -->
 <div class="section">
   <div class="section 5">
-    <div class="nospace">
-    <div style="background-color: rgb(85, 85, 85)" id="nav">
+    <div style="background-color: grey">
       <div class="divider"></div>
-      <p align="center"><img src="images/assets/social_icons/twitter_bird.png">SALE:Buy anything for 45% off. Use the promo CODE YOLOMY45 when you buy items."</p>
-    </div>
-    </div>
+      <p align="center"><img src="images/assets/social_icons/twitter.png">"SALE:Buy anything for 45% off. Use the promo CODE YOLOMY45 when you buy items."</p>
     </div>
   </div>
-
+</div>
 </body>
 <footer>
   <!-- this is the beginning of section 6 -->
-  <!--<div class="section">
-  <div class="section 6">-->
-  <div style="background-color: rgb(58, 58, 59)" id="footer">
+  <div class="section">
+  <div class="section 6">
+  <div style="background-color: black">
   <div class="divider"></div>
   <div class="row">
-    <div class="col-md-4" id="YM"><span class="white-text"><h5>YOLOMY</h5><br><p>WE ARE YOLOMY- WE UNDERSTAND FASHION AND STYLE. WE CRAFT OUR PRODUCTS WITH LOVE AND DILIGENCE.</p></span>
+    <div class="col s4"><span class="white-text" >YOLOMY <br> WE ARE YOLOMY-WE UNDERSTAND FASHION AND STYLE.WE CRAFT OUR PRODUCTS WITH LOVE AND DILIGENCE.</span>
     </div>
-    <div class="col-md-4" id="ft"><span class="white-text1"><p>We are social</p><br>
+    <div class="col s4"> <span class="white-text">We are social <br>
       <img src="images/assets/social_icons/g_plus.png">
-      <img src="images/assets/social_icons/facebook.png" id="img2">
-      <img src="images/assets/social_icons/you_tube.png" id="img3">
-      <img src="images/assets/social_icons/stumble_upon.png"><br>
-      <img src="images/assets/social_icons/skype.png" id="img4">
-      <img src="images/assets/social_icons/flickr.png" id="img5">
-      <img src="images/assets/social_icons/twitter.png" id="img6">
-      <img src="images/assets/social_icons/pinterest.png" id="img7">
-      </span>
-      <div class="cp"><h6>COPYRIGHT 2015.YOLOMY INC</h6></div>
+      <img src="images/assets/social_icons/facebook.png">
+      <img src="images/assets/social_icons/you_tube.png">
+      <img src="images/assets/social_icons/stumble_upon.png">
+      <img src="images/assets/social_icons/skype.png">
+      <img src="images/assets/social_icons/flickr.png">
+      <img src="images/assets/social_icons/twitter_bird.png">
+      <img src="images/assets/social_icons/pinterest.png">
     </div>
-    <div class="col-md-4">
-      <span class="white-text2"> 
-      <p>CREDITS | PRIVACY | ABOUT | CONTACT<br></p> <h4>Yolomy: We Mean Fashion</h4>
+    <div class="col s4">
+      <span class="white-text "> 
+      CREDITS|PRIVACY|ABOUT|CONTACT<br> Yolomy:We Mean Fashion
       </span>
     </div>
   </div>
-  </div>
-  <!--</div>
-  </div>-->
 </footer>
 </html>
