--- a/Assignment_1/index.html
+++ b/Assignment_1/index.html
@@ -15,7 +15,7 @@
   <div class="part1">
     <div class="row">
     <div class="divider"></div>
-    <nav style="background-color: transparent;">
+  <!--  <nav style="background-color: transparent;">
       <div class="nav-wrapper">
         <a href="#" class="brand-logo">Yolomy</a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
@@ -24,9 +24,18 @@
           <li><a href="collapsible.html"><img src="images/assets/logo/shop.png" alt="image"></a></li>
         </ul>
       </div>
-    </nav>
+    </nav>-->
+  <div class="header">
+    <h2>Yolomy</h2>
+      <ul class="right hide-on-med-and-down">
+        <li class="hm">Home</li>
+        <li class="pt">Products</li>
+        <li><img src="images/assets/logo/shop.png" id="lg"></li>
+      </ul>
+  </div>
+
     <!-- this is the beginning of section 1-->
-    <div class="section">
+  <div class="section">
       <h1>Our clothing , your comfort</h1>
       <p>We understand that you need to look good and feel great.<br>It all starts with what you are wearing.</p>
     </div>
