--- a/Assignment_1/index.html
+++ b/Assignment_1/index.html
@@ -32,6 +32,7 @@
         <li class="pt">Products</li>
         <li><img src="images/assets/logo/shop.png" id="lg"></li>
       </ul>
+      <i class="arrow down"></i>
   </div>
 
     <!-- this is the beginning of section 1-->
@@ -61,12 +62,24 @@
         </div>
       </div>
     </div>
-  </div>        
+  </div> 
+  <div class="row" id="Mn">
+    <div class="col-md-12">
+      <p>MEN</p>
+    </div>
+  </div>       
     <!-- this is the beginning of section 3 -->
         <div class="row">
           <div class="col-md-4">
             <div class="card" id="box">
               <div class="card-image waves-effect waves-block waves-light">
+                <div class="Sz">
+                  
+                  <h6>SIZE</h6>
+                  <span class="dot"></span>
+                  <span class="dt"></span>
+                  <span class="d"></span>
+                </div>
               <img class="activator" src="images/assets/products/tshirt.png" id="shirt">
               </div>
               <div class="card-content" id="shadow">
