card background colour

--- a/Assignment_1/index.html
+++ b/Assignment_1/index.html
@@ -72,7 +72,7 @@
         <div class="row">
           <div class="col-md-4">
             <div class="card" id="box">
-              <div class="card-image waves-effect waves-block waves-light">
+              <div class="card-image waves-effect waves-block waves-dark grey">
                 <div class="Sz">
                   
                   <h6>SIZE</h6>
@@ -81,10 +81,10 @@
                   <span class="d"></span>
                 </div>
               <img class="activator" src="images/assets/products/tshirt.png" id="shirt">
-              </div>
               <div class="card-content" id="shadow">
                 <span class="card-title activator grey-text text-darken-4"><strong>T-SHIRT</strong></span>
                 <p><strong>5,00€</strong></p>
+              </div>
               </div>
               <!--<div class="card-reveal">
                 <span class="card-title grey-text text-darken-4">Card Titleclose</span>
@@ -94,12 +94,12 @@
             </div>
           <div class="col-md-4">
             <div class="card" id="box1">
-              <div class="card-image waves-effect waves-block waves-light">
+              <div class="card-image waves-effect waves-block waves-dark grey">
                 <img class="activator" src="images/assets/products/pants.png" id="pants">
-              </div>
               <div class="card-content" id="card">
                 <span class="card-title activator grey-text text-darken-4"><strong>PANTS FORCLAS</span></strong>
                 <p><strong>30,00€</strong></p>
+              </div>
               </div>
               <!--<div class="card-reveal">
                 <span class="card-title grey-text text-darken-4">Card Titleclose</span>
@@ -109,12 +109,12 @@
           </div>
           <div class="col-md-4">
             <div class="card" id="box2">
-              <div class="card-image waves-effect waves-block waves-light">
+              <div class="card-image waves-effect waves-block waves-dark grey">
                 <img class="activator" src="images/assets/products/backpack.png" id="bag">
-              </div>
               <div class="card-content" id="content">
                 <span class="card-title activator grey-text text-darken-4"><strong>BAG PACK</strong></span>
                 <p><strong>60,00€</strong></p>
+              </div>
               </div>
               <!--<div class="card-reveal">
                 <span class="card-title grey-text text-darken-4">Card Titleclose</span>
@@ -132,12 +132,10 @@
       </div>
   <div class="row"> 
     <div class="col-md-4"> 
-  <!--  <div class="card small">-->
       <div class="ladies">
         <div class="card" id="jt">
-          <div class="card-image waves-effect waves-block waves-light">
+          <div class="card-image waves-effect waves-block waves-dark grey">
             <img class="activator" src="images/assets/products/giacket.png" id="jacket">
-          </div>
           <div class="card-content" id="jtcontent">
             <span class="card-title activator grey-text text-darken-4"><strong>GIACKET</strong></span>
             <p><strong>60,00€</strong></p>
@@ -146,18 +144,19 @@
             <span class="card-title grey-text text-darken-4">Card Titleclose</i></span>
             <p>Here is some more information about this product that is only revealed once clicked on.</p>
           </div>-->
+          </div>
         </div>
       </div>
     <!--  </div>-->
     </div>
       <div class="col-md-4">
         <div class="card" id="trekking">
-          <div class="card-image waves-effect waves-block waves-light">
+          <div class="card-image waves-effect waves-block waves-light grey" style="background-color: rgb(240, 240, 240)">
             <img class="activator" src="images/assets/products/trekkingshoes.png" id="shoes">
-          </div>
           <div class="card-content" id="TS">
             <span class="card-title activator grey-text text-darken-4"><strong>TREKKING SHOES</strong></span>
             <p><strong>80,00€</strong></p>
+          </div>
           </div>
           <!--<div class="card-reveal">
             <span class="card-title grey-text text-darken-4">Card Title</span>
@@ -167,12 +166,12 @@
       </div>
       <div class="col-md-4">
         <div class="card" id="Tbox">
-          <div class="card-image waves-effect waves-block waves-light">
+          <div class="card-image waves-effect waves-block waves dark grey">
             <img class="activator" src="images/assets/products/tshirt_ladies.png" id="Tshirt">
-          </div>
           <div class="card-content" id="SHIRT">
             <span class="card-title activator grey-text text-darken-4"><strong>T-SHIRT</strong></span>
             <p><strong>20,00€</strong></p>
+          </div>
           </div>
           </div>
          <!-- <div class="card-reveal">
