--- a/Assignment_1/index.html
+++ b/Assignment_1/index.html
@@ -72,7 +72,7 @@
         <div class="row">
           <div class="col-md-4">
             <div class="card" id="box">
-              <div class="card-image waves-effect waves-block waves-dark grey">
+              <div class="card-image waves-effect waves-block waves" style="background-color: rgb(240, 240, 240)">
                 <div class="Sz">
                   
                   <h6>SIZE</h6>
@@ -94,7 +94,7 @@
             </div>
           <div class="col-md-4">
             <div class="card" id="box1">
-              <div class="card-image waves-effect waves-block waves-dark grey">
+              <div class="card-image waves-effect waves-block waves-" style="background-color: rgb(240, 240, 240)">
                 <img class="activator" src="images/assets/products/pants.png" id="pants">
               <div class="card-content" id="card">
                 <span class="card-title activator grey-text text-darken-4"><strong>PANTS FORCLAS</span></strong>
@@ -109,7 +109,7 @@
           </div>
           <div class="col-md-4">
             <div class="card" id="box2">
-              <div class="card-image waves-effect waves-block waves-dark grey">
+              <div class="card-image waves-effect waves-block waves" style="background-color: rgb(240, 240, 240)">
                 <img class="activator" src="images/assets/products/backpack.png" id="bag">
               <div class="card-content" id="content">
                 <span class="card-title activator grey-text text-darken-4"><strong>BAG PACK</strong></span>
@@ -134,7 +134,7 @@
     <div class="col-md-4"> 
       <div class="ladies">
         <div class="card" id="jt">
-          <div class="card-image waves-effect waves-block waves-dark grey">
+          <div class="card-image waves-effect waves-block waves-" style="background-color: rgb(240, 240, 240)">
             <img class="activator" src="images/assets/products/giacket.png" id="jacket">
           <div class="card-content" id="jtcontent">
             <span class="card-title activator grey-text text-darken-4"><strong>GIACKET</strong></span>
@@ -151,7 +151,7 @@
     </div>
       <div class="col-md-4">
         <div class="card" id="trekking">
-          <div class="card-image waves-effect waves-block waves-light grey" style="background-color: rgb(240, 240, 240)">
+          <div class="card-image waves-effect waves-block waves-" style="background-color: rgb(240, 240, 240)">
             <img class="activator" src="images/assets/products/trekkingshoes.png" id="shoes">
           <div class="card-content" id="TS">
             <span class="card-title activator grey-text text-darken-4"><strong>TREKKING SHOES</strong></span>
@@ -166,7 +166,7 @@
       </div>
       <div class="col-md-4">
         <div class="card" id="Tbox">
-          <div class="card-image waves-effect waves-block waves dark grey">
+          <div class="card-image waves-effect waves-block waves" style="background-color: rgb(240, 240, 240)">
             <img class="activator" src="images/assets/products/tshirt_ladies.png" id="Tshirt">
           <div class="card-content" id="SHIRT">
             <span class="card-title activator grey-text text-darken-4"><strong>T-SHIRT</strong></span>
